[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warera-client"
version = "0.1.0"
description = "A robust Python client for the WarEra tRPC API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["warera", "game", "api", "client", "trpc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "hatch",
]

[tool.hatch.build.targets.wheel]
packages = ["warera"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# mark tests that use anyio
markers = [
    "anyio: mark tests to run with anyio",
]
